Added CSV upload and Category UI. Added functioniality to parse CSV files.

--- a/BussinesLogic/TimeUtil.BussinesLogic.csproj
+++ b/BussinesLogic/TimeUtil.BussinesLogic.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sharedClasses\TimeUtil.sharedClasses.csproj" />
+    <ProjectReference Include="..\sharedClasses\TimeUtil.SharedClasses.csproj" />
   </ItemGroup>
 
 </Project>
