--- a/TimeUtil.components/TimeUtil.Components.csproj
+++ b/TimeUtil.components/TimeUtil.Components.csproj
@@ -1,28 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<!--<UseRazorSourceGenerator>false</UseRazorSourceGenerator>-->
+	</PropertyGroup>
 
 
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
-    <PackageReference Include="MudBlazor" Version="6.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
+		<PackageReference Include="MudBlazor" Version="6.0.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\BussinesLogic\TimeUtil.BussinesLogic.csproj" />
-    <ProjectReference Include="..\sharedClasses\TimeUtil.SharedClasses.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\BussinesLogic\TimeUtil.BussinesLogic.csproj" />
+		<ProjectReference Include="..\sharedClasses\TimeUtil.SharedClasses.csproj" />
+	</ItemGroup>
 
 </Project>
