add shared classes ref to server

--- a/TimeUtil.Server/TimeUtil.Server.csproj
+++ b/TimeUtil.Server/TimeUtil.Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\sharedClasses\TimeUtil.SharedClasses.csproj" />
     <ProjectReference Include="..\TimeUtil.BlazorWasmClient\TimeUtil.BlazorWasmClient.csproj" />
   </ItemGroup>
 
