--- a/TimeUtil.components/TimeUtil.Components.csproj
+++ b/TimeUtil.components/TimeUtil.Components.csproj
@@ -26,7 +26,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\BussinesLogic\TimeUtil.BussinesLogic.csproj" />
-		<ProjectReference Include="..\sharedClasses\TimeUtil.SharedClasses.csproj" />
+		<ProjectReference Include="..\TimeUtil.Shared\TimeUtil.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
