--- a/TimeUtil.BlazorWasmClient/TimeUtil.BlazorWasmClient.csproj
+++ b/TimeUtil.BlazorWasmClient/TimeUtil.BlazorWasmClient.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BussinesLogic\TimeUtil.BussinesLogic.csproj" />
     <ProjectReference Include="..\TimeUtil.components\TimeUtil.Components.csproj" />
   </ItemGroup>
 
