--- a/TimeUtil.components/TimeUtil.Components.csproj
+++ b/TimeUtil.components/TimeUtil.Components.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -20,8 +20,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
-		<PackageReference Include="MudBlazor" Version="6.0.17" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.11" />
+		<PackageReference Include="MudBlazor" Version="6.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
