--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       run: dotnet publish TimeUtil.BlazorWasmClient/TimeUtil.BlazorWasmClient.csproj -c Release -o release --nologo
       
       # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to TimeUtil
-      run: sed -i 's/<base href="\/" \/>/<base href="\/TimeUtil\/" \/>/g' release/wwwroot/index.html
+    - name: Change base-tag in index.html from / to TimeUtil-bug
+      run: sed -i 's/<base href="\/" \/>/<base href="\/TimeUtil-bug\/" \/>/g' release/wwwroot/index.html
       
       # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
